fix: video frame viewer center aligned

--- a/static/video_player_styles.css
+++ b/static/video_player_styles.css
@@ -44,7 +44,6 @@ body {
   align-content: center;
   justify-content: center;
   flex-wrap: wrap;
-  display: flex;
 }
 
 
@@ -68,6 +67,7 @@ body {
     transition: opacity 0.4s;
     padding-left: 15px;
     padding-right: 15px;
+    visibility: hidden;
 }
 .container:hover .controls {
     opacity: 1;
@@ -112,15 +112,27 @@ body {
 
 .image-section img {
   position: relative;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-left: auto; !important
+  margin-right: auto; !important
   top: 0;
-  width: 100%;
-  height: 95%;
+  min-width: 95vw;
+  max-height: 95vh;
   border-radius: 4px;
   object-fit: cover;
   display: block;
+  justify-content: center;
+  align-content: center;
 }
+
+.image-section {
+
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto
+
+}
+
+
 
 @media screen and (max-width: 1200px) {
 
@@ -137,7 +149,8 @@ body {
   .image-section {
     padding-top: 0;
     width: 100%;
-    height: auto;
+    height: 100%;
+    object: cover;
   }
 }
 
